<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The CyanogenMod Project

     Licensed under the GNU GPLv2 license

     The text of the license can be found in the LICENSE file
     or at https://www.gnu.org/licenses/gpl-2.0.txt
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <ListPreference
        android:key="@string/update_check_key"
        android:dialogTitle="@string/update_check_title"
        android:title="@string/update_check_title"
        android:entries="@array/update_check_entries"
        android:entryValues="@array/update_check_values"
        android:defaultValue="@string/check_on_boot"
        android:summary="@string/check_on_boot"/>

     <ListPreference
        android:key="@string/update_type_key"
        android:dialogTitle="@string/update_type_title"
        android:title="@string/update_type_title"
        android:entries="@array/update_type_entries"
        android:entryValues="@array/update_type_values"
        android:defaultValue="@string/type_all_incl_nightly"
        android:summary="@string/type_all_incl_nightly"/>

</PreferenceScreen>
