<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The CyanogenMod Project

     Licensed under the GNU GPLv2 license

     The text of the license can be found in the LICENSE file
     or at https://www.gnu.org/licenses/gpl-2.0.txt
-->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:title="@string/app_name" >

        <fragment
            android:id="@+id/available_updates_fragment_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            class="com.cyanogenmod.updater.preferences.AvailableUpdatesFragment"
            android:key="@string/available_updates_fragment_key"
            android:title="@string/available_updates_fragment_title" >
        </fragment>

        <fragment
            android:id="@+id/update_fragment_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            class="com.cyanogenmod.updater.preferences.UpdateFragment"
            android:key="@string/update_fragment_key"
            android:title="@string/update_fragment_title" >
        </fragment>

        <fragment
            android:id="@+id/notification_fragment_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            class="com.cyanogenmod.updater.preferences.NotificationFragment"
            android:key="@string/notification_fragment_key"
            android:title="@string/notification_fragment_title" >
        </fragment>
    </LinearLayout>
